Feat(ESPHome binding): Enhance binary sensor handling
- follow feedback - tags are the semantic tag here.